Fix css font-family
When the sidebar was introduced in v0.7 the default font-family property
got messed up, but this commit should fix the issue.

--- a/cgit.css
+++ b/cgit.css
@@ -4,7 +4,7 @@ body, table {
 }
 
 body {
-	font-family: sans;
+	font-family: sans-serif;
 	font-size: 10pt;
 	color: #333;
 	background: white;
